bugfix: overflow

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -290,6 +290,8 @@
 
   .clip {
     overflow-y: auto;
+    overflow-x: hidden;
+    max-width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -299,5 +301,7 @@
     background-color: #000;
     box-shadow: 0 0 40rem #000;
     min-width: 80vw;
+    max-width: 100%;
+    margin: 0;
   }
 }
